--- a/main.css
+++ b/main.css
@@ -1,5 +1,6 @@
 header {
   width: 100%;
   height: 300px;
-  background: pink;
+  background-image: url(./image/header.jpg);
+  background-size: cover;
 }
