--- a/main.css
+++ b/main.css
@@ -1,6 +1,5 @@
-header {
-  width: 100%;
-  height: 300px;
-  background-image: url(./image/header.jpg);
-  background-size: cover;
+header{
+    height: 300px;
+    background-image: url(./images/header.jpg);
+    background-size: cover;
 }
